--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "datejs": "^1.0.0-rc3",
     "react": "^16.2.0",
     "react-calendar": "^2.13.5",
     "react-dom": "^16.2.0",
